Fix truncate visible selector. Set default height to hero element.

--- a/src/scss/_finalsite.scss
+++ b/src/scss/_finalsite.scss
@@ -832,6 +832,13 @@ $constituent-photo-width: 100px;
     vertical-align: top;
 }
 
+
+.fsMediaGalleryThumbnail {
+    .media-portrait & {
+        height: 312px;
+    }
+}
+
 // Account Bar
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
