--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -5,13 +5,8 @@
     position: relative;
     z-index: 0;
     width: 100%;
+    height: 768px;
     overflow: hidden;
-    // @media #{$small-up} and (max-height: em-calc(431)) {
-    //     min-height: rem-calc(431);
-    // }
-    // @media #{$medium-up} and (max-height: em-calc(560)) {
-    //     min-height: rem-calc(560);
-    // }
 }
 
 .hero-text {
@@ -19,9 +14,7 @@
     top: 0; left: 0;
     z-index: 0;
     width: 100%;
-    .is-resized & {
-        height: 100%;
-    }
+    height: 100%;
     .feature-is-playing & {
         display: none;
     }
@@ -65,6 +58,12 @@
     // @media #{$large-up} {
     //     font-size: rem-calc(64);
     // }
+}
+
+.hero-division-title {
+    @media #{$medium-up} { 
+        display: none; 
+    }      
 }
 
 .hero-subtitle {
